// Modelo conceitual do Google Sheets usado pelo MVP GS Mapeamento.
// Cada tabela representa uma aba. DBML e usado apenas para visualizacao.

Enum tipo_reuniao {
  aberta
  fechada
}

Enum categoria_visitante {
  provavel_adicto
  familiar
  profissional
  estudante
  outro
}

Enum origem_contato {
  indicacao_pessoal
  familiar
  profissional
  grupo_na
  internet
  redes_sociais
  radio
  tv
  material_impresso
  evento_palestra
  encaminhamento
  outro
}

Enum dia_semana {
  domingo
  segunda
  terca
  quarta
  quinta
  sexta
  sabado
}

Table grupos {
  grupo_id uuid [pk]
  zoom_id varchar [not null, note: 'ID externo do Zoom; pode se repetir']
  grupo_nome varchar [not null, unique]
  ordem integer [not null, note: 'Compatibilidade visual na planilha; aplicacao ordena por nome']
  ativo boolean [not null, default: true]
  responsavel_grupo_nome varchar
  responsavel_grupo_email varchar
  email_acesso_grupo varchar [note: 'Login Google do responsavel do grupo']
  responsaveis_ata text [note: 'Compatibilidade; responsavel por ata e registrado em atas.preenchido_por']
  link_formulario_ata varchar [unique, note: 'Identificador gerado para /preencher/{link}']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    zoom_id
    email_acesso_grupo
  }
}

Table grupo_horarios {
  horario_id uuid [pk]
  grupo_id uuid [not null]
  dia_semana dia_semana [not null]
  hora_inicio time [not null]
  link_reuniao varchar
  ativo boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (grupo_id, dia_semana, hora_inicio) [note: 'Horarios ativos nao devem duplicar esta combinacao']
  }
}

Table atas {
  ata_id uuid [pk]
  grupo_id uuid [not null]
  data_reuniao date [not null]
  hora_inicio time [not null]
  preenchido_por varchar [not null]
  plataforma varchar [not null]
  tipo_reuniao tipo_reuniao [not null]
  formato_partilha boolean [not null, default: false]
  formato_estudo boolean [not null, default: false]
  formato_tematico boolean [not null, default: false]
  formato_literatura boolean [not null, default: false]
  formato_passos boolean [not null, default: false]
  formato_tradicoes boolean [not null, default: false]
  total_membros_presentes integer [not null, note: 'Maior ou igual a zero']
  total_partilhas integer [not null, note: 'Maior ou igual a zero']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Note: 'Pelo menos um formato de reuniao deve ser verdadeiro.'

  indexes {
    (grupo_id, data_reuniao, hora_inicio) [unique, note: 'Chave de negocio validada pela aplicacao para prevenir duplicidade']
  }
}

Table servidores {
  servidor_id uuid [pk]
  ata_id uuid [not null]
  nome varchar [not null]
  ordem integer [not null, note: 'Inteiro a partir de 1']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (ata_id, ordem) [unique]
  }
}

Table participacao {
  participacao_id uuid [pk]
  ata_id uuid [not null]
  localidade varchar [not null]
  estado varchar [note: 'Obrigatorio quando pais for Brasil']
  pais varchar [not null]
  presencas integer [not null, note: 'Inteiro maior que zero']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table visitantes {
  visitante_id uuid [pk]
  ata_id uuid [not null]
  nome varchar [not null]
  cidade varchar [not null, note: 'Municipio brasileiro controlado no formato Nome - UF']
  categoria categoria_visitante [not null]
  origem_contato origem_contato [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table trocas_chaveiro {
  troca_chaveiro_id uuid [pk]
  ata_id uuid [not null]
  tempo_limpo varchar [not null, note: '1M, 2M, 3M, 6M, 9M, 12M, 18M ou MULTIPLOS_ANOS']
  quantidade integer [not null, note: 'Inteiro maior que zero']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table ingressos {
  ingresso_id uuid [pk]
  ata_id uuid [not null]
  nome varchar [not null, note: 'Usar Anonimo quando nao informado']
  cidade varchar [not null, note: 'Municipio brasileiro controlado no formato Nome - UF']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Ref: atas.grupo_id > grupos.grupo_id
Ref: grupo_horarios.grupo_id > grupos.grupo_id
Ref: servidores.ata_id > atas.ata_id
Ref: participacao.ata_id > atas.ata_id
Ref: visitantes.ata_id > atas.ata_id
Ref: ingressos.ata_id > atas.ata_id
Ref: trocas_chaveiro.ata_id > atas.ata_id
